testsuite/tests/rename/should_fail/T17244C.stderr

T17244C.hs:10:9: error:
    Ambiguous occurrence ‘sum’
    It could refer to
       either ‘Prelude.sum’,
              imported from ‘Prelude’ at T17244C.hs:3:8-14
              (and originally defined in ‘Data.Foldable’)
           or ‘Data.List.sum’,
              imported from ‘Data.List’ at T17244C.hs:7:19-21
              (and originally defined in ‘GHC.List’)
